--- a/main.css
+++ b/main.css
@@ -36,6 +36,8 @@ body {
 #header {
   height: 100vh;
   background-image: radial-gradient(circle at 43.56% 1.07%, #fae79b, transparent 49%),radial-gradient(circle at 19.03% 31.2%, #d47fa9, transparent 37%),radial-gradient(circle at 19.91% 99.09%, #bbedfa, transparent 49%),radial-gradient(circle at 3.51% 57.08%, #9031c8, transparent 54%),radial-gradient(circle at 97.51% 91.17%, #c0f492, transparent 49%),radial-gradient(circle at 50% 50%, #960645, #960645 100%);
+  position: fixed;
+  z-index: 0;
 }
 #header:before {
   content: "";
