--- a/main.css
+++ b/main.css
@@ -73,4 +73,16 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
+  display: grid;
+  grid-template-columns: 5vw 35vw 60vw;
+  grid-template-rows: 5vw 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
+
+#logo { grid-area: 1 / 1 / 2 / 2; }
+#socials { grid-area: 1 / 2 / 2 / 3; }
+#navigation { grid-area: 1 / 3 / 2 / 4; }
+#side { grid-area: 2 / 1 / 3 / 2; }
+#main-links { grid-area: 2 / 2 / 3 / 3; }
+#main-content { grid-area: 2 / 3 / 3 / 4; }
