--- a/main.css
+++ b/main.css
@@ -80,9 +80,28 @@ body {
   grid-row-gap: 0px;
 }
 
-#logo { grid-area: 1 / 1 / 2 / 2; }
-#socials { grid-area: 1 / 2 / 2 / 3; }
-#navigation { grid-area: 1 / 3 / 2 / 4; }
-#side { grid-area: 2 / 1 / 3 / 2; }
-#main-links { grid-area: 2 / 2 / 3 / 3; }
-#main-content { grid-area: 2 / 3 / 3 / 4; }
+#logo {
+  grid-area: 1 / 1 / 2 / 2;
+  border-bottom: 1px solid var(--black-hex);
+  border-right: 1px solid var(--black-hex);
+}
+#socials {
+  grid-area: 1 / 2 / 2 / 3;
+  border-bottom: 1px solid var(--black-hex);
+  border-right: 1px solid var(--black-hex);
+}
+#navigation {
+  grid-area: 1 / 3 / 2 / 4;
+  border-bottom: 1px solid var(--black-hex);
+}
+#side {
+  grid-area: 2 / 1 / 3 / 2;
+  border-right: 1px solid var(--black-hex);
+}
+#main-links {
+  grid-area: 2 / 2 / 3 / 3;
+  border-right: 1px solid var(--black-hex);
+}
+#main-content {
+  grid-area: 2 / 3 / 3 / 4;
+}
