--- a/main.css
+++ b/main.css
@@ -89,10 +89,14 @@ body {
   grid-area: 1 / 2 / 2 / 3;
   border-bottom: 1px solid var(--black-hex);
   border-right: 1px solid var(--black-hex);
+  display: flex;
+  align-items: center;
 }
 #navigation {
   grid-area: 1 / 3 / 2 / 4;
   border-bottom: 1px solid var(--black-hex);
+  display: flex;
+  align-items: center;
 }
 #side {
   grid-area: 2 / 1 / 3 / 2;
