--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@
   
   --body-font: 'Raleway';
   --title-font: 'Vidaloka';
+  font-size: 16px;
 }
 
 html {
@@ -30,7 +31,7 @@ html {
 
 body {
   color: var(--black-hex);
-  font: 400 16px/24px var(--body-font);
+  font: 400 1rem/1.5rem var(--body-font);
   letter-spacing: .1px;
 }
 #header {
