--- a/main.css
+++ b/main.css
@@ -92,12 +92,14 @@ body {
   border-right: 1px solid var(--black-hex);
   display: flex;
   align-items: center;
+  font-size: 0.8125rem;
 }
 #navigation {
   grid-area: 1 / 3 / 2 / 4;
   border-bottom: 1px solid var(--black-hex);
   display: flex;
   align-items: center;
+  font-size: 0.8125rem;
 }
 #side {
   grid-area: 2 / 1 / 3 / 2;
