--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ body {
   grid-area: 1 / 1 / 2 / 2;
   border-bottom: 1px solid var(--black-hex);
   border-right: 1px solid var(--black-hex);
+  padding: 5px;
 }
 #socials {
   grid-area: 1 / 2 / 2 / 3;
@@ -93,6 +94,7 @@ body {
   display: flex;
   align-items: center;
   font-size: 0.8125rem;
+  padding: 0px 10px;
 }
 #navigation {
   grid-area: 1 / 3 / 2 / 4;
@@ -100,6 +102,7 @@ body {
   display: flex;
   align-items: center;
   font-size: 0.8125rem;
+  padding: 0px 10px;
 }
 #side {
   grid-area: 2 / 1 / 3 / 2;
