--- a/main.css
+++ b/main.css
@@ -17,8 +17,8 @@
   --bluel-hex: #b2dfe6;
   --black: 18 18 18;
   --black-hex: #121212;
-  --white: 255 255 255;
-  --white-hex: #ffffff;
+  --white: 253 251 251;
+  --white-hex: #fdfbfb;
   
   --body-font: 'Raleway';
   --title-font: 'Vidaloka';
