--- a/main.css
+++ b/main.css
@@ -86,6 +86,7 @@ body {
   border-bottom: 1px solid var(--black-hex);
   border-right: 1px solid var(--black-hex);
   padding: 5px;
+  background: rgba(var(--white) / 70%);
 }
 #socials {
   grid-area: 1 / 2 / 2 / 3;
@@ -95,6 +96,7 @@ body {
   align-items: center;
   font-size: 0.8125rem;
   padding: 0px 10px;
+  background: rgba(var(--white) / 70%);
 }
 #navigation {
   grid-area: 1 / 3 / 2 / 4;
@@ -103,10 +105,12 @@ body {
   align-items: center;
   font-size: 0.8125rem;
   padding: 0px 10px;
+  background: rgba(var(--white) / 70%);
 }
 #side {
   grid-area: 2 / 1 / 3 / 2;
   border-right: 1px solid var(--black-hex);
+  background: rgba(var(--white) / 70%);
 }
 #main-links {
   grid-area: 2 / 2 / 3 / 3;
