--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ body {
   font: 400 1rem/1.5rem var(--body-font);
   letter-spacing: .1px;
 }
+
 #header {
   height: 100vh;
   width: 100%;
@@ -88,6 +89,7 @@ body {
   padding: 5px;
   background: rgba(var(--white) / 70%);
 }
+
 #socials {
   grid-area: 1 / 2 / 2 / 3;
   border-bottom: 1px solid var(--black-hex);
@@ -98,6 +100,13 @@ body {
   padding: 0px 10px;
   background: rgba(var(--white) / 70%);
 }
+#socials a:link, #socials a:visited, #socials a:active {
+  color: blue;
+}
+#socials a:hover {
+   color: red;
+}
+
 #navigation {
   grid-area: 1 / 3 / 2 / 4;
   border-bottom: 1px solid var(--black-hex);
@@ -107,15 +116,18 @@ body {
   padding: 0px 10px;
   background: rgba(var(--white) / 70%);
 }
+
 #side {
   grid-area: 2 / 1 / 3 / 2;
   border-right: 1px solid var(--black-hex);
   background: rgba(var(--white) / 70%);
 }
+
 #main-links {
   grid-area: 2 / 2 / 3 / 3;
   border-right: 1px solid var(--black-hex);
 }
+
 #main-content {
   grid-area: 2 / 3 / 3 / 4;
 }
