--- a/main.css
+++ b/main.css
@@ -104,12 +104,12 @@ body {
   color: #bf5475;
   text-shadow: none;
   margin-right: 5%;
-  transform: 3s ease-in-out;
+  transition: .8s ease-in-out;
 }
 #socials a:hover {
   color: #81d2f1;
   text-shadow: 0px 0px 10px #ffffff;
-  transform: 3s ease-in-out;
+  transition: .8s ease-in-out;
 }
 
 #navigation {
