--- a/main.css
+++ b/main.css
@@ -121,6 +121,15 @@ body {
   padding: 0px 10px;
   background: rgba(var(--white) / 70%);
 }
+#navigation a:link, #navigation a:visited, #navigation a:active, #navigation a:hover {
+  color: #bf5475;
+}
+#navigation span {position: relative; width: max-content; margin-right: 5%;}
+#navigation span:after {display: block; content: ''; position: absolute; bottom: 0; left: 0; height: 1px; width: 0; background-color: #81d2f1; transition: .8s ease-in-out;}
+#navigation span:hover:after {
+  width: 100%;
+  transition: .8s ease-in-out;
+}
 
 #side {
   grid-area: 2 / 1 / 3 / 2;
