--- a/main.css
+++ b/main.css
@@ -123,10 +123,13 @@ body {
 }
 #navigation a:link, #navigation a:visited, #navigation a:active, #navigation a:hover {
   color: #bf5475;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-decoration: none;
 }
 #navigation span {position: relative; width: max-content; margin-right: 5%;}
-#navigation span:after {display: block; content: ''; position: absolute; bottom: 0; left: 0; height: 1px; width: 0; background-color: #81d2f1; transition: .8s ease-in-out;}
-#navigation span:hover:after {
+#navigation span:before {display: block; content: ''; position: absolute; bottom: 6px; left: 0; height: 1px; width: 0; background-color: #81d2f1; transition: .8s ease-in-out;}
+#navigation span:hover:before {
   width: 100%;
   transition: .8s ease-in-out;
 }
