--- a/main.css
+++ b/main.css
@@ -121,7 +121,7 @@ body {
   padding: 0px 10px;
   background: rgba(var(--white) / 70%);
 }
-#navigation a:link, #navigation a:visited, #navigation a:active, #navigation a:hover {
+#navigation a, #navigation a:link, #navigation a:visited, #navigation a:active, #navigation a:hover {
   color: #bf5475;
   text-transform: uppercase;
   font-weight: 600;
