--- a/main.css
+++ b/main.css
@@ -5,10 +5,11 @@
 }
 
 :root {
-  --pinkd: 237 98 93;
-  --pinkd-hex: #ed625d;
-  --pinkl: 247 159 136;
-  --pinkl-hex: #f79f88;
+  --lpink: 191 84 117;
+  --lpink-hex: #bf5475;
+  --lblue: 129 210 241;
+  --lblue-hex: #81d2f1;
+  
   --blued: 3 35 45;
   --blued-hex: #03232d;
   --bluem: 6 182 198;
@@ -101,13 +102,13 @@ body {
   background: rgba(var(--white) / 70%);
 }
 #socials a:link, #socials a:visited, #socials a:active {
-  color: #bf5475;
+  color: var(--lpink-hex);
   text-shadow: none;
   margin-right: 5%;
   transition: .8s ease-in-out;
 }
 #socials a:hover {
-  color: #81d2f1;
+  color: var(--lblue-hex);
   text-shadow: 0px 0px 10px #ffffff;
   transition: .8s ease-in-out;
 }
@@ -128,13 +129,25 @@ body {
   text-decoration: none;
 }
 #navigation a:link, #navigation a:visited, #navigation a:active, #navigation a:hover {
-  color: #bf5475;
+  color: var(--lpink-hex);
   text-transform: uppercase;
   font-weight: 600;
   text-decoration: none;
 }
-#navigation span {position: relative; width: max-content; margin-right: 5%;}
-#navigation span.lactive:before {display: block; content: ''; position: absolute; bottom: 6px; left: 0; height: 1px; width: 0; background-color: #81d2f1; transition: .8s ease-in-out;}
+#navigation span {
+  position: relative;
+  width: max-content;
+  margin-right: 5%;
+}
+#navigation span.lactive:before {
+  display: block;
+  content: '';
+  position: absolute;
+  bottom: 6px; left: 0;
+  height: 1px; width: 0;
+  background-color: var(--lblue-hex);
+  transition: .8s ease-in-out;
+}
 #navigation span.lactive:hover:before {
   width: 100%;
   transition: .8s ease-in-out;
