--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@ body {
   font-weight: 600;
   text-decoration: none;
 }
-#navigation .no-link, #navigation .nolink:hover {
+#navigation .nolink, #navigation .nolink:hover {
   color: var(--black-hex);
   text-transform: uppercase;
   font-weight: 600;
