--- a/main.css
+++ b/main.css
@@ -7,8 +7,8 @@
 :root {
   --lpink: 191 84 117;
   --lpink-hex: #bf5475;
-  --lblue: 129 210 241;
-  --lblue-hex: #81d2f1;
+  --lpurple: 187 114 174;
+  --lpurple-hex: #bb72ae;
   
   --blued: 3 35 45;
   --blued-hex: #03232d;
@@ -88,7 +88,7 @@ body {
   border-bottom: 1px solid var(--black-hex);
   border-right: 1px solid var(--black-hex);
   padding: 5px;
-  background: rgba(var(--white) / 70%);
+  background: rgba(var(--white) / 40%);
 }
 
 #socials {
@@ -99,7 +99,7 @@ body {
   align-items: center;
   font-size: 0.8125rem;
   padding: 0px 10px;
-  background: rgba(var(--white) / 70%);
+  background: rgba(var(--white) / 40%);
 }
 #socials a:link, #socials a:visited, #socials a:active {
   color: var(--lpink-hex);
@@ -108,7 +108,7 @@ body {
   transition: .8s ease-in-out;
 }
 #socials a:hover {
-  color: var(--lblue-hex);
+  color: var(--lpurple-hex);
   text-shadow: 0px 0px 10px #ffffff;
   transition: .8s ease-in-out;
 }
@@ -120,7 +120,7 @@ body {
   align-items: center;
   font-size: 0.8125rem;
   padding: 0px 10px;
-  background: rgba(var(--white) / 70%);
+  background: rgba(var(--white) / 40%);
 }
 #navigation a:link, #navigation a:visited, #navigation a:active, #navigation a:hover {
   color: var(--lpink-hex);
@@ -145,7 +145,7 @@ body {
   position: absolute;
   bottom: 6px; left: 0;
   height: 1px; width: 0;
-  background-color: var(--lblue-hex);
+  background-color: var(--lpurple-hex);
   transition: .8s ease-in-out;
 }
 #navigation span.lactive:hover:before {
