--- a/indexpage.css
+++ b/indexpage.css
@@ -4,3 +4,11 @@
   overflow: hidden;
   position: relative;
 }
+
+.player {
+  border-radius: 77% 100% 74% 100% / 100% 100% 72% 66%;
+}
+#dae {}
+#mae {}
+#sitename {}
+#tagline {}
