--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ body {
   z-index: 1;
   display: grid;
   grid-template-columns: 2.5vw 35vw 62.5vw;
-  grid-template-rows: 2.5vw 1fr;
+  grid-template-rows: 2.5vw calc(100vh - 2.5vw);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
