--- a/indexpage.css
+++ b/indexpage.css
@@ -51,3 +51,18 @@
   margin-top: -4%;
   user-select: none;
 }
+
+#main-side {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+#ms-mae-n { grid-area: 1 / 1 / 2 / 2; }
+#ms-mae-i { grid-area: 2 / 1 / 3 / 2; }
+#ms-dae-n { grid-area: 3 / 1 / 4 / 2; }
+#ms-dae-i { grid-area: 4 / 1 / 5 / 2; }
