--- a/boyspage.css
+++ b/boyspage.css
@@ -43,6 +43,23 @@ text-decoration: none;
 .boys-pager {}
 .boys-pager-item {}
 .boys-pager-link {}
+.boy-blob {
+    border-radius: 38% 62% 69% 31% / 35% 46% 54% 65%;
+    padding: 5px;
+    position: relative;
+    z-index: 1;
+    width: 3vw;
+    height: 3vw;
+}
+.boy-blob div {
+    width: 100%;
+    height: 100%;
+    border-radius: 38% 62% 69% 31% / 35% 46% 54% 65%;
+}
+.boys-pager-link span {
+position: relative;
+    z-index: 2;
+}
 
 .boys-wrapper {
     position: relative;
