--- a/boyspage.css
+++ b/boyspage.css
@@ -50,8 +50,7 @@ text-decoration: none;
 width: max-content;
     margin: 10px;
 }
-.boys-pager-link {position: relative;}
-.boys-pager-link a {
+.boys-pager-link {
     display: block;
 width: 10vw;
     height: 10vw;
