--- a/boyspage.css
+++ b/boyspage.css
@@ -76,7 +76,7 @@ width: 10vw;
 .boy-j div {background-image: url(https://media1.tenor.com/images/8fa9101021905b3a149156862fc28d13/tenor.gif);}
 .boy-o div {background-image: url(https://i.pinimg.com/474x/0f/2e/0b/0f2e0b7301f3587e0c15433d4a38bee4.jpg);}
 .boy-p div {background-image: url(https://data.whicdn.com/images/281212451/original.gif);}
-.boy-r div {background-image: url(https://img.wattpad.com/1284a5f57fa93cc9cb421f6aab9ccfb8371ac7ce/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f59655857477148396a4b544244413d3d2d3736353136323639322e313562363135666630653264396664633333373135333435393537332e676966);}
+.boy-r div {background-image: url(https://www.unique.dk/wp-content/uploads/2017/08/model-beauty-earth-11059-beige_-927x1000.jpg);}
 .boy-t div {background-image: url(https://data.whicdn.com/images/330991008/original.gif);}
 .boys-pager-link span {
 position: absolute;
