--- a/boyspage.css
+++ b/boyspage.css
@@ -72,12 +72,12 @@ width: 10vw;
     background-position: center;
     background-size: cover;
 }
-.boy-g div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
-.boy-j div {background-image: url(https://media1.tenor.com/images/8fa9101021905b3a149156862fc28d13/tenor.gif);}
+.boy-g div {background-image: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/untitled-38-1619113076.jpeg);}
+.boy-j div {background-image: url(https://i.pinimg.com/originals/06/20/3e/06203ebbf37e9f80c18104a5d3cdd00a.jpg);}
 .boy-o div {background-image: url(https://i.pinimg.com/474x/0f/2e/0b/0f2e0b7301f3587e0c15433d4a38bee4.jpg);}
-.boy-p div {background-image: url(https://data.whicdn.com/images/281212451/original.gif);}
+.boy-p div {background-image: url(https://pm1.narvii.com/6469/7874cb75f1ca9a61a2a3efa900873afa8e5e8ba3_hq.jpg);}
 .boy-r div {background-image: url(https://www.unique.dk/wp-content/uploads/2017/08/model-beauty-earth-11059-beige_-927x1000.jpg);}
-.boy-t div {background-image: url(https://data.whicdn.com/images/330991008/original.gif);}
+.boy-t div {background-image: url(https://i.pinimg.com/736x/25/a9/8b/25a98b7664f24040328a8f650c725ac1.jpg);}
 .boys-pager-link span {
 position: absolute;
     z-index: 2;
