--- a/boyspage.css
+++ b/boyspage.css
@@ -105,6 +105,7 @@ position: absolute;
 .main-slider div.boy-slide {
     height: 100%;
     overflow: hidden;
+    background: rgba(var(--lpurple) / 20%);
 }
 
 
