--- a/boyspage.css
+++ b/boyspage.css
@@ -106,6 +106,22 @@ position: absolute;
     height: 100%;
     overflow: hidden;
     background: rgba(var(--lpurple) / 20%);
+    position: relative;
 }
 
-
+.boy-main-image {
+width: 20vw;
+    height: 20vw;
+    border-radius: 60% 40% 22% 78% / 60% 65% 35% 40%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: blue;
+    padding: 10px;
+}
+.boy-main-image div {
+    width: 100%;
+    height: 100%;
+    border-radius: 60% 40% 22% 78% / 60% 65% 35% 40%;
+    background: red;
+}
