--- a/boyspage.css
+++ b/boyspage.css
@@ -110,18 +110,18 @@ position: absolute;
 }
 
 .boy-main-image {
-width: 20vw;
-    height: 20vw;
-    border-radius: 60% 40% 22% 78% / 60% 65% 35% 40%;
+width: 30vw;
+    height: 30vw;
+    border-radius: 60% 40% 32% 68% / 60% 65% 35% 40%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -10px;
+    left: -20px;
     background: blue;
     padding: 10px;
 }
 .boy-main-image div {
     width: 100%;
     height: 100%;
-    border-radius: 60% 40% 22% 78% / 60% 65% 35% 40%;
+    border-radius: 60% 40% 32% 68% / 60% 65% 35% 40%;
     background: red;
 }
