--- a/boyspage.css
+++ b/boyspage.css
@@ -116,12 +116,15 @@ width: 30vw;
     position: absolute;
     top: -10px;
     left: -20px;
-    background: blue;
+    background: rgba(var(--white) / 40%);
     padding: 10px;
 }
 .boy-main-image div {
     width: 100%;
     height: 100%;
     border-radius: 60% 40% 32% 68% / 60% 65% 35% 40%;
-    background: red;
+    background-size: cover;
+    background-position: center;
 }
+
+#gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
