--- a/boyspage.css
+++ b/boyspage.css
@@ -130,16 +130,18 @@ width: 30vw;
 height: 30vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: center;
-    font: 600 12vw/90% var(--title-font);
+    font: 600 10vw/90% var(--title-font);
     position: relative;
     z-index: 2;
     color: var(--lpink-hex);
     padding-right: 5%;
+    padding-left: 18vw;
     mix-blend-mode: exclusion;
+    text-align: right;
 }
-.boy-name span.name-first {color: var(--white-hex);}
-.boy-name span.name-last {opacity: 0.5;}
+.boy-name span.name-first {color: var(--white-hex); display: block;}
+.boy-name span.name-last {opacity: 0.5; display: block; width: 100%;}
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
