--- a/boyspage.css
+++ b/boyspage.css
@@ -137,11 +137,11 @@ height: 30vw;
     z-index: 2;
     color: var(--lpink-hex);
     padding-right: 5%;
-    padding-left: 18vw;
+    padding-left: 25vw;
     mix-blend-mode: exclusion;
     text-align: right;
 }
-.boy-name span.name-first {color: var(--white-hex); display: block;}
+.boy-name span.name-first {color: var(--white-hex); display: block; width: 100%;}
 .boy-name span.name-last {opacity: 0.5; display: block; width: 100%;}
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
