--- a/boyspage.css
+++ b/boyspage.css
@@ -144,7 +144,7 @@ height: 30vw;
 .boy-name span.name-last {opacity: 0.5; display: block; width: 100%;}
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
-#june-page .boy-main-image div {background-image: url(https://media1.tenor.com/images/8fa9101021905b3a149156862fc28d13/tenor.gif);}
+#june-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/02614f7ec4065f5142e86ed68b2f0906/tumblr_p2bvw10sto1wgxxf0o2_400.gif);}
 #ori-page .boy-main-image div {background-image: url();}
 #pawn-page .boy-main-image div {background-image: url(https://data.whicdn.com/images/281212451/original.gif);}
 #roman-page .boy-main-image div {background-image: url(https://img.wattpad.com/1284a5f57fa93cc9cb421f6aab9ccfb8371ac7ce/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f59655857477148396a4b544244413d3d2d3736353136323639322e313562363135666630653264396664633333373135333435393537332e676966);}
