--- a/boyspage.css
+++ b/boyspage.css
@@ -81,7 +81,7 @@ transform: scale(1);
     background-size: cover;
 }
 .boy-g div {background-image: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/untitled-38-1619113076.jpeg);}
-.boy-j div {background-image: url(https://i.pinimg.com/originals/06/20/3e/06203ebbf37e9f80c18104a5d3cdd00a.jpg);}
+.boy-j div {background-image: url(https://64.media.tumblr.com/0e5744c4d9945ae85496922ba660cb82/tumblr_p21uuvhac61wgxxf0o2_400.jpg);}
 .boy-o div {background-image: url(https://i.pinimg.com/474x/0f/2e/0b/0f2e0b7301f3587e0c15433d4a38bee4.jpg);}
 .boy-p div {background-image: url(https://pm1.narvii.com/6469/7874cb75f1ca9a61a2a3efa900873afa8e5e8ba3_hq.jpg);}
 .boy-r div {background-image: url(https://www.unique.dk/wp-content/uploads/2017/08/model-beauty-earth-11059-beige_-927x1000.jpg);}
