--- a/boyspage.css
+++ b/boyspage.css
@@ -151,7 +151,10 @@ font: 600 1rem var(--body-font);
     margin: 15vh 0px;
     padding: 0px 5vw;
 }
-.boy-quote span {}
+.boy-quote span {
+margin: 0 1vw;
+    color: var(--lpink-hex);
+}
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
 #june-page .boy-main-image div {background-image: url(https://i.pinimg.com/originals/b0/e9/81/b0e9810d6b862290108aa79e0e7b4637.jpg);}
