--- a/boyspage.css
+++ b/boyspage.css
@@ -1,3 +1,5 @@
+::-webkit-scrollbar {background: var(--lpink-hex); width: 3px;}
+::-webkit-scrollbar-thumb {border: 1px solid var(--lpink-hex); background: var(--black-hex);}
 #main-links {overflow: hidden;}
 #page-title {
 font: 400 6vw var(--title-font);
