--- a/boyspage.css
+++ b/boyspage.css
@@ -158,9 +158,21 @@ margin: 0 1vw;
     color: var(--lpink-hex);
 }
 
-.boy-small-detail {}
-.sml-deet {}
-.sml-deet span {}
+.boy-small-detail {
+display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-flow: wrap;
+    border-top: 1px solid var(--black-hex);
+    border-bottom: 1px solid var(--black-hex);
+}
+.sml-deet {width: 50%;}
+.deet-l-t {}
+.deet-r-t {}
+.deet-l-b {}
+.deet-r-b {}
+.deet-l-t, .deet-l-b {}
+.sml-deet span {display: block;}
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
 #june-page .boy-main-image div {background-image: url(https://i.pinimg.com/originals/b0/e9/81/b0e9810d6b862290108aa79e0e7b4637.jpg);}
