--- a/boyspage.css
+++ b/boyspage.css
@@ -171,6 +171,7 @@ display: flex;
 .deet-r-t {}
 .deet-l-b {}
 .deet-r-b {}
+.deet-l-t, .deet-r-t {}
 .deet-l-t, .deet-l-b {}
 .sml-deet span {display: block;}
 
