--- a/boyspage.css
+++ b/boyspage.css
@@ -171,8 +171,8 @@ display: flex;
 .deet-r-t {}
 .deet-l-b {}
 .deet-r-b {}
-.deet-l-t, .deet-r-t {}
-.deet-l-t, .deet-l-b {}
+.deet-l-t, .deet-r-t {border-bottom: 1px solid var(--black-hex);}
+.deet-l-t, .deet-l-b {border-right: 1px solid var(--black-hex);}
 .sml-deet span {display: block;}
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
