--- a/boyspage.css
+++ b/boyspage.css
@@ -178,8 +178,8 @@ width: 50%;
 .deet-r-t {}
 .deet-l-b {}
 .deet-r-b {}
-.deet-l-t, .deet-r-t {border-bottom: 1px solid var(--lpink-hex);}
-.deet-l-t, .deet-l-b {border-right: 1px solid var(--lpink-hex);}
+.deet-l-t, .deet-r-t {border-bottom: 1px solid rgba(var(--black) / 20%);}
+.deet-l-t, .deet-l-b {border-right: 1px solid rgba(var(--black) / 20%);}
 .sml-deet span {
 display: block;
     font: 600 1rem var(--body-font);
@@ -187,7 +187,7 @@ display: block;
     letter-spacing: 3px;
     color: var(--white-hex);
     width: max-content;
-    border-bottom: 1px solid var(--lpurple-hex);
+    border-bottom: 1px solid var(--lpink-hex);
 }
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
