--- a/boyspage.css
+++ b/boyspage.css
@@ -214,6 +214,38 @@ font: 400 2vw var(--title-font);
     border-bottom: 1px solid var(--lpink-hex);
 }
 
+.chart {
+display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(11, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
+.div1 { grid-area: 1 / 1 / 12 / 2; }
+.div2 { grid-area: 1 / 5 / 12 / 6; }
+.div3 { grid-area: 1 / 3 / 2 / 4; }
+.div4 { grid-area: 2 / 3 / 3 / 4; }
+.div5 { grid-area: 3 / 3 / 4 / 4; }
+.div6 { grid-area: 4 / 3 / 5 / 4; }
+.div7 { grid-area: 5 / 3 / 6 / 4; }
+.div8 { grid-area: 6 / 3 / 7 / 4; }
+.div9 { grid-area: 7 / 3 / 8 / 4; }
+.div10 { grid-area: 8 / 3 / 9 / 4; }
+.div11 { grid-area: 9 / 3 / 10 / 4; }
+.div12 { grid-area: 10 / 3 / 11 / 4; }
+.div13 { grid-area: 11 / 3 / 12 / 4; }
+
+
+#gabe-page .div14 { grid-area: 1 / 4 / 8 / 5; }
+#gabe-page .div15 { grid-area: 8 / 4 / 9 / 5; }
+#gabe-page .div16 { grid-area: 9 / 4 / 12 / 5; }
+#gabe-page .div17 { grid-area: 1 / 2 / 2 / 3; }
+#gabe-page .div18 { grid-area: 2 / 2 / 7 / 3; }
+#gabe-page .div19 { grid-area: 7 / 2 / 8 / 3; }
+#gabe-page .div20 { grid-area: 8 / 2 / 9 / 3; }
+#gabe-page .div21 { grid-area: 9 / 2 / 12 / 3; }
+
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
 #june-page .boy-main-image div {background-image: url(https://i.pinimg.com/originals/b0/e9/81/b0e9810d6b862290108aa79e0e7b4637.jpg);}
 #ori-page .boy-main-image div {background-image: url(https://pbs.twimg.com/media/EwkLpaDVEAMhlmN.jpg);}
