--- a/boyspage.css
+++ b/boyspage.css
@@ -220,7 +220,13 @@ grid-template-columns: repeat(5, 1fr);
 grid-template-rows: repeat(11, 1fr);
 grid-column-gap: 0px;
 grid-row-gap: 0px;
+    margin: 2vw;
+    text-transform: uppercase;
+    font-size: 0.8125rem;
+    letter-spacing: 1px;
 }
+.chart span {}
+.chart div {}
 
 .div1 { grid-area: 1 / 1 / 12 / 2; }
 .div2 { grid-area: 1 / 5 / 12 / 6; }
