--- a/boyspage.css
+++ b/boyspage.css
@@ -216,8 +216,8 @@ font: 400 2vw var(--title-font);
 
 .chart {
 display: grid;
-grid-template-columns: 2vw repeat(3, 1fr) 2vw;
-grid-template-rows: repeat(11, 1fr);
+grid-template-columns: 2vw repeat(2, 1fr) 5vw 2vw;
+grid-template-rows: repeat(11, 45px);
 grid-column-gap: 0px;
 grid-row-gap: 0px;
     margin: 2vw;
@@ -226,12 +226,14 @@ grid-row-gap: 0px;
 text-transform: uppercase;
     font-size: 0.8125rem;
     letter-spacing: 1px;
+    text-align: center;
+    display: block;
 }
-.chart div {}
+.chart div {padding: 0.5vw; line-height: 33px;}
 
-.div1 { grid-area: 1 / 1 / 12 / 2; }
-.div2 { grid-area: 1 / 5 / 12 / 6; }
-.div3 { grid-area: 1 / 3 / 2 / 4; }
+.div1 { grid-area: 1 / 1 / 12 / 2; border-right: 1px solid rgba(var(--black) / 20%); }
+.div2 { grid-area: 1 / 5 / 12 / 6; display: flex; align-items: flex-end; justify-content: center; border-left: 1px solid rgba(var(--black) / 20%); }
+.div3 { grid-area: 1 / 3 / 2 / 4; border-top: 1px solid rgba(var(--black) / 20%); }
 .div4 { grid-area: 2 / 3 / 3 / 4; }
 .div5 { grid-area: 3 / 3 / 4 / 4; }
 .div6 { grid-area: 4 / 3 / 5 / 4; }
@@ -241,17 +243,25 @@ text-transform: uppercase;
 .div10 { grid-area: 8 / 3 / 9 / 4; }
 .div11 { grid-area: 9 / 3 / 10 / 4; }
 .div12 { grid-area: 10 / 3 / 11 / 4; }
-.div13 { grid-area: 11 / 3 / 12 / 4; }
+.div13 { grid-area: 11 / 3 / 12 / 4; border-bottom: 1px solid rgba(var(--black) / 20%); }
+
+.planet {text-transform: uppercase; border-right: 1px solid rgba(var(--black) / 20%); border-left: 1px solid rgba(var(--black) / 20%);}
+.house {
+display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    font: 400 2vw var(--title-font);
+}
 
 
-#gabe-page .div14 { grid-area: 1 / 4 / 8 / 5; }
-#gabe-page .div15 { grid-area: 8 / 4 / 9 / 5; }
-#gabe-page .div16 { grid-area: 9 / 4 / 12 / 5; }
-#gabe-page .div17 { grid-area: 1 / 2 / 2 / 3; }
-#gabe-page .div18 { grid-area: 2 / 2 / 7 / 3; }
-#gabe-page .div19 { grid-area: 7 / 2 / 8 / 3; }
-#gabe-page .div20 { grid-area: 8 / 2 / 9 / 3; }
-#gabe-page .div21 { grid-area: 9 / 2 / 12 / 3; }
+#gabe-page .div14 { grid-area: 1 / 4 / 8 / 5; border-top: 1px solid rgba(var(--black) / 20%); }
+#gabe-page .div15 { grid-area: 8 / 4 / 9 / 5; border-top: 1px solid rgba(var(--black) / 20%); border-bottom: 1px solid rgba(var(--black) / 20%); }
+#gabe-page .div16 { grid-area: 9 / 4 / 12 / 5; border-bottom: 1px solid rgba(var(--black) / 20%); }
+#gabe-page .div17 { grid-area: 1 / 2 / 2 / 3; border-top: 1px solid rgba(var(--black) / 20%); }
+#gabe-page .div18 { grid-area: 2 / 2 / 7 / 3; border-top: 1px solid rgba(var(--black) / 20%); }
+#gabe-page .div19 { grid-area: 7 / 2 / 8 / 3; border-top: 1px solid rgba(var(--black) / 20%); }
+#gabe-page .div20 { grid-area: 8 / 2 / 9 / 3; border-top: 1px solid rgba(var(--black) / 20%); border-bottom: 1px solid rgba(var(--black) / 20%); }
+#gabe-page .div21 { grid-area: 9 / 2 / 12 / 3; border-bottom: 1px solid rgba(var(--black) / 20%); }
 
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
 #june-page .boy-main-image div {background-image: url(https://i.pinimg.com/originals/b0/e9/81/b0e9810d6b862290108aa79e0e7b4637.jpg);}
