--- a/boyspage.css
+++ b/boyspage.css
@@ -229,9 +229,9 @@ text-transform: uppercase;
     text-align: center;
     display: block;
 }
-.chart div {padding: 0.5vw; line-height: 33px;}
+.chart div {padding: 0.5vw 1vw; line-height: 33px;}
 
-.div1 { grid-area: 1 / 1 / 12 / 2; border-right: 1px solid rgba(var(--black) / 20%); }
+.div1 { grid-area: 1 / 1 / 12 / 2; display: flex; align-items: flex-start; justify-content: center; border-right: 1px solid rgba(var(--black) / 20%); }
 .div2 { grid-area: 1 / 5 / 12 / 6; display: flex; align-items: flex-end; justify-content: center; border-left: 1px solid rgba(var(--black) / 20%); }
 .div3 { grid-area: 1 / 3 / 2 / 4; border-top: 1px solid rgba(var(--black) / 20%); }
 .div4 { grid-area: 2 / 3 / 3 / 4; }
