--- a/boyspage.css
+++ b/boyspage.css
@@ -220,7 +220,7 @@ grid-template-columns: 2vw repeat(2, 1fr) 5vw 2vw;
 grid-template-rows: repeat(11, 45px);
 grid-column-gap: 0px;
 grid-row-gap: 0px;
-    margin: 2vw;
+    margin: 2vw 10vw;
 }
 .chart span {
 text-transform: uppercase;
