--- a/boyspage.css
+++ b/boyspage.css
@@ -285,6 +285,17 @@ display: flex;
 #june-page .div27 { grid-area: 9 / 2 / 11 / 3; border-top: 1px solid rgba(var(--black) / 20%); border-bottom: 1px solid rgba(var(--black) / 20%); }
 #june-page .div28 { grid-area: 11 / 2 / 12 / 3; border-bottom: 1px solid rgba(var(--black) / 20%); }
 
+#ori-page .div14 { grid-area: 1 / 4 / 2 / 5; }
+#ori-page .div15 { grid-area: 2 / 4 / 4 / 5; }
+#ori-page .div16 { grid-area: 4 / 4 / 9 / 5; }
+#ori-page .div17 { grid-area: 9 / 4 / 11 / 5; }
+#ori-page .div18 { grid-area: 11 / 4 / 12 / 5; }
+#ori-page .div19 { grid-area: 1 / 2 / 2 / 3; }
+#ori-page .div20 { grid-area: 2 / 2 / 4 / 3; }
+#ori-page .div21 { grid-area: 4 / 2 / 8 / 3; }
+#ori-page .div22 { grid-area: 8 / 2 / 11 / 3; }
+#ori-page .div23 { grid-area: 11 / 2 / 12 / 3; }
+
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
 #june-page .boy-main-image div {background-image: url(https://i.pinimg.com/originals/b0/e9/81/b0e9810d6b862290108aa79e0e7b4637.jpg);}
 #ori-page .boy-main-image div {background-image: url(https://pbs.twimg.com/media/EwkLpaDVEAMhlmN.jpg);}
