--- a/boyspage.css
+++ b/boyspage.css
@@ -296,6 +296,49 @@ display: flex;
 #ori-page .div22 { grid-area: 8 / 2 / 11 / 3; }
 #ori-page .div23 { grid-area: 11 / 2 / 12 / 3; }
 
+#pawn-page .div14 { grid-area: 1 / 4 / 3 / 5; }
+#pawn-page .div15 { grid-area: 3 / 4 / 4 / 5; }
+#pawn-page .div16 { grid-area: 4 / 4 / 6 / 5; }
+#pawn-page .div17 { grid-area: 6 / 4 / 7 / 5; }
+#pawn-page .div18 { grid-area: 7 / 4 / 8 / 5; }
+#pawn-page .div19 { grid-area: 8 / 4 / 9 / 5; }
+#pawn-page .div20 { grid-area: 9 / 4 / 12 / 5; }
+#pawn-page .div21 { grid-area: 1 / 2 / 3 / 3; }
+#pawn-page .div22 { grid-area: 3 / 2 / 4 / 3; }
+#pawn-page .div23 { grid-area: 4 / 2 / 7 / 3; }
+#pawn-page .div24 { grid-area: 7 / 2 / 8 / 3; }
+#pawn-page .div25 { grid-area: 8 / 2 / 9 / 3; }
+#pawn-page .div26 { grid-area: 9 / 2 / 11 / 3; }
+#pawn-page .div27 { grid-area: 11 / 2 / 12 / 3; }
+
+#roman-page .div14 { grid-area: 1 / 4 / 5 / 5; }
+#roman-page .div15 { grid-area: 5 / 4 / 7 / 5; }
+#roman-page .div16 { grid-area: 7 / 4 / 8 / 5; }
+#roman-page .div17 { grid-area: 8 / 4 / 9 / 5; }
+#roman-page .div18 { grid-area: 9 / 4 / 10 / 5; }
+#roman-page .div19 { grid-area: 10 / 4 / 11 / 5; }
+#roman-page .div20 { grid-area: 11 / 4 / 12 / 5; }
+#roman-page .div21 { grid-area: 1 / 2 / 5 / 3; }
+#roman-page .div22 { grid-area: 5 / 2 / 7 / 3; }
+#roman-page .div23 { grid-area: 7 / 2 / 9 / 3; }
+#roman-page .div24 { grid-area: 9 / 2 / 10 / 3; }
+#roman-page .div25 { grid-area: 10 / 2 / 12 / 3; }
+
+#tai-page .div14 { grid-area: 1 / 4 / 4 / 5; }
+#tai-page .div15 { grid-area: 4 / 4 / 5 / 5; }
+#tai-page .div16 { grid-area: 5 / 4 / 6 / 5; }
+#tai-page .div17 { grid-area: 6 / 4 / 7 / 5; }
+#tai-page .div18 { grid-area: 7 / 4 / 10 / 5; }
+#tai-page .div19 { grid-area: 10 / 4 / 12 / 5; }
+#tai-page .div20 { grid-area: 1 / 2 / 2 / 3; }
+#tai-page .div21 { grid-area: 2 / 2 / 5 / 3; }
+#tai-page .div22 { grid-area: 5 / 2 / 6 / 3; }
+#tai-page .div23 { grid-area: 6 / 2 / 7 / 3; }
+#tai-page .div24 { grid-area: 7 / 2 / 8 / 3; }
+#tai-page .div25 { grid-area: 8 / 2 / 9 / 3; }
+#tai-page .div26 { grid-area: 9 / 2 / 10 / 3; }
+#tai-page .div27 { grid-area: 10 / 2 / 12 / 3; }
+
 #gabe-page .boy-main-image div {background-image: url(https://64.media.tumblr.com/4471f99939e06f6876f44b4cc0600708/b5b56003134ad65d-b0/s400x600/16a1cafe3fe37827096c6cd7493c21e14e627fed.gif);}
 #june-page .boy-main-image div {background-image: url(https://i.pinimg.com/originals/b0/e9/81/b0e9810d6b862290108aa79e0e7b4637.jpg);}
 #ori-page .boy-main-image div {background-image: url(https://pbs.twimg.com/media/EwkLpaDVEAMhlmN.jpg);}
