--- a/boyspage.css
+++ b/boyspage.css
@@ -213,7 +213,15 @@ font: 400 2vw var(--title-font);
     border-bottom: 1px solid var(--lpink-hex);
 }
 
-.astro-big3 { }
+.astro-big3 {
+padding: 0 2vw;
+    margin: 2vw auto;
+    width: 38vw;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-evenly;
+}
 .astro-big3 i {font-family: astrodotbasic; font-style: normal; font-size: 1.2rem; padding-right: .5vw;}
 .chart {
 display: grid;
