--- a/boyspage.css
+++ b/boyspage.css
@@ -389,3 +389,33 @@ position: fixed;
     margin: -40vh 0 0 -40vw;
     z-index: 3;
 }
+.analysis-container {
+display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.analysis-block {
+	width: 90%;
+    margin-bottom: 45px;
+}
+.analysis-symbol {
+    padding-bottom: 10px;
+    font-size: 30px;
+	font-family: astrodotbasic; font-size: 1.2rem;
+}
+.analysis-stats {
+    line-height: 16px;
+    padding-bottom: 10px;
+	font-family: Akkurat-Mono,Andale Mono,sans-serif;
+    font-size: 12px;
+    color: #575657;
+    letter-spacing: 0;
+	text-transform: uppercase;
+}
+.analysis-analysis {
+	font-family: AkkuratPro-Regular,Arial,sans-serif;
+    font-size: 14px;
+    color: #575657;
+    letter-spacing: 0;
+    line-height: 20px;
+}
