--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body::before {
     display: block;
     content: '';
     position: absolute;
-    top: 0;
+    top: -40px;
     left: 0;
     bottom: 0;
     right: 0;
