--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --border-color-hex: #a5adb0; 
+}
 body {
     width: 100%;
     height: 100vh;
@@ -44,12 +47,12 @@ a:hover {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    border: 1px solid #a5adb0;
+    border: 1px solid var(--border-color-hex);
     display: grid;
     grid-template-columns: 80px 1fr;
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
-#index-sidebar { grid-area: 1 / 1 / 2 / 2; }
+#index-sidebar { grid-area: 1 / 1 / 2 / 2; border-right: 1px solid var(--border-color-hex); }
 #index-content { grid-area: 1 / 2 / 2 / 3; }
