--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
+    overflow: hidden;
     background-image: url(https://images.unsplash.com/photo-1649293849269-6cb966992234?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80);
     background-size: cover;
     background-position: center;
