--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    padding-top: 40px;
 }
 body::before {
     display: block;
@@ -41,7 +42,7 @@ a:hover {
 }
 #index-container {
     position: relative;
-    margin: 40px;
+    margin: 0 40px 40px;
     width: calc(100% - 80px);
     height: calc(100vh - 80px);
     background-image: url(https://images.unsplash.com/photo-1649293849269-6cb966992234?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80);
