--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body::before {
     display: block;
     content: '';
     position: absolute;
-    top: -40px;
+    top: 0;
     left: 0;
     bottom: 0;
     right: 0;
