--- a/css/main.css
+++ b/css/main.css
@@ -61,4 +61,8 @@ a:hover {
     grid-row-gap: 0px;
 }
 #index-sidebar { grid-area: 1 / 1 / 2 / 2; border-right: 1px solid var(--border-color-hex); backdrop-filter: blur(10px); }
+#index-sidebar .sidebar-ico {}
+.sidebar-ico#home-btn {}
+.sidebar-ico#totop-btn {}
+.sidebar-ico#tobtm-btn {}
 #index-content { grid-area: 1 / 2 / 2 / 3; backdrop-filter: blur(3px); }
