--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ a:hover {
     flex-direction: column;
     align-items: stretch;
     justify-content: flex-end; }
-#index-sidebar .sidebar-ico {text-align: center; padding: 10px;}
+#index-sidebar .sidebar-ico {text-align: center; padding: 27px 0px;}
 .sidebar-ico#home-btn {margin-bottom: auto; border-bottom: 1px solid var(--border-color-hex);}
 .sidebar-ico#totop-btn {border-top: 1px solid var(--border-color-hex);}
 .sidebar-ico#tobtm-btn {border-top: 1px solid var(--border-color-hex);}
