--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -1,3 +1,9 @@
 #idx-header {
-  background-image: url(https://img.nickpic.host/ADVvqe.png);
+  display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: 1fr;
+grid-column-gap: 0px;
+grid-row-gap: 0px;
 }
+#ih-illustration {grid-area: 1 / 1 / 2 / 4;}
+#ih-text {grid-area: 1 / 2 / 2 / 6;}
